--- a/git.html
+++ b/git.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>깃 연습</title>
+  <title>git</title>
   <link rel="stylesheet" href="./git.css" />
 </head>
 <body>
-  <h1>깃 수정</h1>
-  <p><b>깃</b>파일을 수정했습니다.</p>
+  <h1>git modification</h1>
+  <p><b>git</b> modified...</p>
 </body>
 </html>
